# Dedukti

./: .git-blame-ignore-revs  .gitignore  .merlin  .ocamlformat  .travis.yml  BRANCHES.md  CHANGELOG.md  CONTRIBUTING.md  GNUmakefile  INSTALL  MANUAL  META  Makefile  Manual.md  README  README.md  TODO  TUTORIAL.md  _oasis  _tags  builtins.dk  checker.ml  checker.mli  cmds.ml  cmds.mli  com_ex.dk  configure  confluence.ml  confluence.mli  criticalPairs.ml  debug.ml  declarations.mli  dedukti.install  dedukti.mli  dedukti.mlpack  dedukti.opam  dep.ml  dep.mli  dk2mmt.ml  dkcheck.ml  (+66 more)
Coq_lib/: Makefile
api/: .merlin  api.mllib  api.odocl  dep.ml  dep.mli  dep_legacy.ml  dep_legacy.mli  dune  entry.ml  entry.mli  env.ml  env.mli  errors.ml  errors.mli  files.ml  files.mli  files_legacy.ml  files_legacy.mli  meta.ml  meta.mli  pp.ml  pp.mli  processor.ml  processor.mli
commands/: .#dkcheck.ml  .merlin  config.ml  dkcheck.ml  dkdep.ml  dkindent.ml  dkmeta.ml  dkpretty.ml  dkprune.ml  dktop.ml  dune  main.ml  skcheck.ml  skdep.ml  sktop.ml  universo.ml
config/: coq_config.mli  coqine_config.mli  local.mk.in
coqine/: Coq1univ.dk  Makefile  coqine.ml  euTerms.ml  main.ml
csv/: holide_luajit-2.0.0-beta9_2013-02-22_17h06.csv
dedukti/: index.html
dkcheck/: checker.ml  checker.mli  dkcheck.ml  dkcheck.odocl
dkdep/: dep.ml  dep.mli  dkdep.ml
dkindent/: dkindent.ml
dklib/: dk.mllib  dk.mlpack
dkmeta/: checker.ml  dkmeta.ml
dkparse/: INSTALL  Makefile  camlTypeChecker.ml  codeGeneration.ml  deBruijn.ml  debug.ml  dkparse.ml  global.ml  lexer.mll  luaCodeGeneration.ml  luaCodeGeneration2.ml  luaGeneration.ml  luaGenerationBase.ml  luaTypeChecker.ml  main.ml  mmt.ml  parser.mly  patternMatching.ml  refine.ml  types.ml
dkrule/: dkrule.ml  rules.ml  rules.mli  tpdb.ml  tpdb.mli
dktest/: checker.ml  checker.mli  dktest.ml
dktop/: dktop.ml  top.ml  top.mli
dktrace/: dktrace.ml  tracer.ml
ediloh/: ast.mli  checker.ml  checker.mli  checker_gadt.ml  compiler.ml  compiler.mli  ediloh.ml  examples.ml  hol.ml  hol.mli  openstt.ml  openstt.mli  opentheory.ml  opentheory.mli  opentheory.mli~  opentheory.ml~  tracer.ml  type.ml
editors/: dedukti.el  dedukti.vim
eniqoc/: ast.mli  checker.ml  compiler.ml  compiler.mli  eniqoc.ml  print.ml  print.mli
examples/: FO.dk  FO_theorems.dk  abstraction.dk  append.dk  append.sk  arith.dk  church.dk  classical.dk  coc.dk  compute.dk  compute.sk  emptySet.dk  emptySet.sk  firstOrder.dk  firstOrder.sk  firstOrderMini.dk  lambda.dk  lambda2.dk  plus.dk  plus.sk  polarized.dk  polarized_resolution.dk  polarized_unconfluence.dk  pureLambdaCalculus.dk  pureLambdaCalculus2.dk  records.sk  surjective.dk  test.dk  tuto.dk  tuto_inde.dk
kernel/: .merlin  META  ac.ml  ac.mli  acterm.ml  acterm.mli  api-kernel.odocl  basic.ml  basic.mli  basics.ml  basics.mli  callgraph.ml  callgraph.mli  cfg.ml  cfg.mli  cic.ml  cic.mli  cmd.ml  cmd.mli  comparetest.ml  confluence.ml  confluence.mli  constraints.ml  constraints.mli  constsigntype.ml  dedukti.odocl  diophantienne.ml  diophantienne.mli  dko.ml  dko.mli  dtree.ml  dtree.mli  dune  entry.ml  entry.mli  env.ml  env.mli  errors.ml  errors.mli  export.ml  (+67 more)
lib/: compat.ml  envars.ml  envars.mli  flags.ml  flags.mli  system.ml  util.ml  util.mli
libraries/: Makefile  README.md  dedukti-libraries.sh  dklib.sh  focalide.sh  holide.sh  iprover.sh  matita-light.sh  matita.sh  plein_de_dks.sh  verine.sh  zenon_modulo.sh
lpcheck/: .checker.ml.swp  .env.ml.swp  .global.ml.swp  .main.ml.swp  .parser.mly.swp  .term.ml.swp  .types.ml.swp  Makefile  RAL.ml  RAL.mli  checker.ml  debug.ml  env.ml  env.ml.base  global.ml  hashcons.ml  hashcons.mli  lexer.mll  main.ml  parser.mly  patternMatching.ml  term.ml  types.ml
lua/: dedukti.lua
misc/: dedukti.el  dedukti.lang  dedukti.vim
parse/: .merlin  entry.ml  entry.mli  lexer.mll  menhir_parser.mly  parser.ml  parser.mli
parser/: META  builtins.ml  builtins.mli  cmd.ml  cmd.mli  dune  entry.ml  entry.mli  internals.ml  lexer.mll  menhir_parser.mly  parser.ml  parser.mldylib  parser.mli  parser.mllib  parser.mly  preterm.ml  preterm.mli  scoping.ml  scoping.mli  tokens.ml  tokens.mli  toplevel.ml
parsing/: dune  entry.ml  entry.mli  lexer.mll  menhir_parser.mly  parser.ml  parser.mli  preterm.ml  preterm.mli  scoping.ml  scoping.mli  sukerujo_builtins.ml  sukerujo_builtins.mli  sukerujo_lexer.mll  sukerujo_parser.mly  sukerujo_preterm.ml  sukerujo_tokens.ml  tokens.ml
refiner/: underscore.ml  underscore.mli
scripts/: compile  coq_lib  dk2mmt  dkcheck  (+2 more)
(+1077 files in other folders)
