opam-version: "2.0"
name: "Dedukti"
version: "devel"
maintainer: "Deducteam <dedukti-dev@inria.fr>"
authors: [ "Frédéric Blanqui"
           "Raphael Cauderlier"
           "Gaspard Férey"
           "Guillaume Genestier"
           "Rodolphe Lepigre"
           "Ronan Saillard"
           "François Thiré" ]
homepage: "https://deducteam.github.io"
bug-reports: "https://github.com/Deducteam/Dedukti/issues"
dev-repo: "https://github.com/Deducteam/Dedukti"
build: [make]
install: [make "install"]
remove: [make "uninstall"]
available: [ ocaml-version >= "4.02" ]
depends: [
  "menhir"
  "dune" {build}
]
