opam-version: "2.0"
name: "Dedukti"
version: "devel"
synopsis: "An implementation of The Lambda-Pi modulo Calculus"
maintainer: "Deducteam <dedukti-dev@inria.fr>"
authors: [ "Frédéric Blanqui"
           "Raphael Cauderlier"
           "Gaspard Férey"
           "Guillaume Genestier"
           "Rodolphe Lepigre"
           "Ronan Saillard"
           "François Thiré" ]
homepage: "https://deducteam.github.io"
bug-reports: "https://github.com/Deducteam/Dedukti/issues"
dev-repo: "git+https://github.com/Deducteam/Dedukti"
build: [make]
install: [make "install"]
remove: [make "uninstall"]
depends: [
  "ocaml" { >= "4.04" }
  "menhir"
  "dune" {build}
]
