(executable
 (name main)
 (modules main dkcheck dkdep dkpretty dkprune config)
 (public_name dkcheck)
 (package dedukti)
 (libraries cmdliner kernel parsers api))

(executable
 (name dktop)
 (public_name dktop)
 (modules dktop)
 (package dedukti)
 (libraries kernel parsers api))

(executable
 (name dkmeta)
 (public_name dkmeta)
 (modules dkmeta)
 (package dedukti)
 (libraries kernel parsers api))
